--- a/Anime Website/HTML/DS.html
+++ b/Anime Website/HTML/DS.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/SL.css">
-        <title>Hetuk Anime Website Solo Leveling Page</title>
+        <link rel="stylesheet" href="../CSS/DS.css">
+        <title>Hetuk Anime Website Demon Slayer Page</title>
     </head>
     <body>
         <header class="title">
@@ -99,18 +99,14 @@
         <div class="parent">
             <div class="child3">
                 <div class="info">
-                    <p class="p1">Crunchyroll</p><span>•</span>
                     <p class="p2">Animated Series</p><span>•</span>
                     <p class="p3">Anime</p><span>•</span>
+                    <p class="p1">Crunchyroll</p><span>•</span>
                     <p class="p4">completed</p><span>•</span>
                     <p class="p5">hindi dub</p><span>•</span>
-                    <p class="p6">tamil dub</p><span>•</span>
-                    <p class="p7">telugu dub</p>
+                    <p class="p7">jio Cinema</p>
                 </div>
-                <h5>Solo Leveling Season 2: Arise from the Shadow
-                    [Hindi-<br>Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &
-                    1080p<br>
-                    HD WEB-DL | 10bit HEVC ESub</h5>
+                <h5>Demon Slayer (Kimetsu no Yaiba) Season 1 Multi Audio<br> [Hindi-English-Jap] 480p, 720p & 1080p HD BluRay |<br> 10bit HEVC ESub</h5>
                 <div class="time">
                     <div class="date">
                         <img src="../utils/Clock.svg"
@@ -123,11 +119,9 @@
                         <p>Hetuk Patel</p>
                     </div>
                 </div>
-                <h4>||Untouched AAC 2.0 Multi Audio Crunchyroll Dub||</h4>
-                <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu
-                    - English -
-                    Japanese | WEB-DL | ESub]</h4>
-                <img src="../utils/Solo Leveling.jpg" alt="Solo Leveling" class="image1">
+                <h4>||Original WEB Hindi 192kbps AAC 2.0 Jio/Muse India Dub||</h4>
+                <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu - English - Japanese | BluRay | ESub]</h4>
+                <img src="../utils/Demon Slayer.jpg" alt="Demon Slayer" class="image1">
                 <div class="anime_info">
                 <div class="genre">
                     <p class="red">Genre:</p>
@@ -135,27 +129,27 @@
                 </div>
                 <div class="org">
                     <p class="red">Org. Run:</p>
-                    <p class="bold">TV Series(2024-2025)</p>
+                    <p class="bold">TV Series(2019-2020)</p>
                 </div>
                 <div class="run">
                     <p class="red">Running Time:</p>
-                    <p class="bold">24min</p>
+                    <p class="bold">25min</p>
                 </div>
                 <div class="lang">
                     <p class="red">Language:</p>
-                    <p class="bold">Japanese - English - Tamil - Telugu - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
+                    <p class="bold"> Japanese DD+2.0 [BD] - English <a class="green">Hindi 2.0</a> [Org. JC WEB Audio]{NEW DUB}</p>
                 </div>
                 <div class="episodes">
                     <p class="red">Episodes:</p>
-                    <p class="bold">13</p>
+                    <p class="bold">26</p>
                 </div>
                 <div class="sub">
                     <p class="red">Subtitle:</p>
-                    <p class="bold">English {ASS} [Softcoded]</p>
+                    <p class="bold">English-Signs & Songs + Dialogue [Softcoded]</p>
                 </div>
                 <div class="quality">
                     <p class="red">Quality:</p>
-                    <p class="bold">1080p FHD | 720p HD | 480p WEB-DL</p>
+                    <p class="bold">1080p FHD | 720p HD | 480p BluRay</p>
                 </div>
                 <div class="encoder">
                     <p class="red">Encoder:</p>
@@ -163,7 +157,15 @@
                 </div>
                 <div class="synopsis">
                     <p class="red">Synopsis:</p>
-                    <p class="bold_1">In a world of gifted hunters and monsters, a weak hunter Sung Jinwoo gains extraordinary powers through a <br>mysterious program, leading him to become one of the strongest hunters and conquering even the strongest dungeons.</p>
+                    <p class="bold_1"> A family is attacked by demons and only two members survive - Tanjiro and his sister Nezuko, who is turning into a<br> demon slowly. Tanjiro sets out to become a demon slayer to avenge his family and cure his sister.</p>
+                </div>
+                <div class="track">
+                    <p class="track1">
+                        Audio Track Info For 1080p HEVC [HQ]:-
+                    </p>
+                    <p class="track1_1">Track 1:- Hindi AAC 2.0 Stereo 192kbps</p>
+                    <p class="track2">Track 2:- English AC3 2.0 Stereo 384kbps</p>
+                    <p class="track2">Track 3:- Japanese E-AC3 2.0 384kbps</p>
                 </div>
             </div>
             <div class="screenshot">
@@ -171,9 +173,9 @@
                 <p class="bold_2">+</p>
             </div>
             <hr class="ss">
-            <p class="sl">||Download Solo Leveling Season 2 Episodes in Hindi Multi Audio||</p>
+            <p class="sl">||Download Demon Slayer: Kimetsu no Yaiba Season 1 Episodes in Hindi Multi Audio||</p>
             <div class="episode1">
-                <p>season 2</p>
+                <p>season 1</p>
                 <div class="episode1_2 open-popup-btn">
                     <p class="small_1">Episode 1</p>
                     <p class="bold_2">+</p>
@@ -223,7 +225,59 @@
                     <p class="bold_2">+</p>
                 </div>
                 <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 13 {NEW}</p>
+                    <p class="small_1">Episode 13</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 14</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 15</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 16</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 17</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 18</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 19</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 20</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 21</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 22</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 23</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 24</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 25 {NEW}</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 26 {NEW}</p>
                     <p class="bold_2">+</p>
                 </div>
             </div>
@@ -235,13 +289,31 @@
             <div class="zip1">
             <p class="zip">||Complete Pack Single Zip File||</p>
             <div class="episode1_3 open-popup-btn">
-                <p class="small_1">Zip Files Single Download Links</p>
+                <p class="small_1">480p SD Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">720p HD Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">720p HEVC Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">1080p HEVC Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">1080p HEVC HQ Complete Pack</p>
                 <p class="bold_2">+</p>
             </div>
             </div>
-            <p class="add">COMPLETE SEASON 2 ADDED</p>
-            <p class="season1">Download Season 1</p>
-            <p class="watch_on">Watch On Crunchyroll & Support Anime in India.</p>
+            <p class="add">COMPLETE SEASON 1 ADDED</p>
+            <p class="season2">Download Season 2</p>
+            <p class="season2">Download Season 3</p>
+            <p class="season1">Download Season 4</p>
+            <p class="watch_on">Watch On Jio Cinema For Free & Support Anime in India.</p>
             <div class="click">
                 <p>how to download movies and series from here?</p>
                 <p class="red">click here</p>
@@ -287,11 +359,11 @@
                     </a>
                 </div>
                 <div class="anime3">
-                    <a href="./DS.html">
-                        <img src="../utils/Demon Slayer(1).jpg" alt="Demon Slayer">
+                    <a href="./JJK.html">
+                        <img src="../utils/Jujutsu Kaisen(1).jpg" alt="Jujutsu Kaisen">
                     </a>
-                    <a href="./DS.html">
-                        <p>Demon Slayer Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
+                    <a href="./JJK.html">
+                        <p>Jujutsu Kaisen Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
                     </a>
                 </div>
             </div>
@@ -343,18 +415,18 @@
                     <hr class="hr_2">
                     <div class="uploads">
                         <p>
-                            Solo Leveling Season 2: Arise from the Shadow
-                            [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
-                            &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            <a href="./SL.html">
+                                Solo Leveling Season 2: Arise from the Shadow
+                                [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
+                                &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            </a>
                         </p>
                         <p>
-                            <a href="./DS.html">
                                 Demon Slayer Season
                                 01[Hindi-Tamil-Telugu-Eng-Jap]
                                 Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
                                 10bit
                                 HEVC ESub
-                            </a>
                         </p>
                         <p>
                             <a href="./JJK.html">
