--- a/Anime Website/HTML/JJK.html
+++ b/Anime Website/HTML/JJK.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/SL.css">
-        <title>Hetuk Anime Website Solo Leveling Page</title>
+        <link rel="stylesheet" href="../CSS/JJK.css">
+        <title>Hetuk Anime Website Jujutsu Kaisen Page</title>
     </head>
     <body>
         <header class="title">
@@ -107,10 +107,7 @@
                     <p class="p6">tamil dub</p><span>•</span>
                     <p class="p7">telugu dub</p>
                 </div>
-                <h5>Solo Leveling Season 2: Arise from the Shadow
-                    [Hindi-<br>Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &
-                    1080p<br>
-                    HD WEB-DL | 10bit HEVC ESub</h5>
+                <h5>Jujutsu Kaisen Season 1 BluRay [Hindi-Tamil-Telugu-<br>Eng-Jap] Multi Audio 480p, 720p & 1080p HD | 10bit<br> HEVC ESub</h5>
                 <div class="time">
                     <div class="date">
                         <img src="../utils/Clock.svg"
@@ -124,10 +121,8 @@
                     </div>
                 </div>
                 <h4>||Untouched AAC 2.0 Multi Audio Crunchyroll Dub||</h4>
-                <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu
-                    - English -
-                    Japanese | WEB-DL | ESub]</h4>
-                <img src="../utils/Solo Leveling.jpg" alt="Solo Leveling" class="image1">
+                <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu - English - Japanese | BluRay | ESub]</h4>
+                <img src="../utils/Jujutsu Kaisen.jpg" alt="Jujutsu Kaisen" class="image1">
                 <div class="anime_info">
                 <div class="genre">
                     <p class="red">Genre:</p>
@@ -135,7 +130,7 @@
                 </div>
                 <div class="org">
                     <p class="red">Org. Run:</p>
-                    <p class="bold">TV Series(2024-2025)</p>
+                    <p class="bold">TV Series(2020-2021)</p>
                 </div>
                 <div class="run">
                     <p class="red">Running Time:</p>
@@ -143,19 +138,19 @@
                 </div>
                 <div class="lang">
                     <p class="red">Language:</p>
-                    <p class="bold">Japanese - English - Tamil - Telugu - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
+                    <p class="bold"> Japanese DD+2.0 [BD] - English - Tamil - Telugu - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
                 </div>
                 <div class="episodes">
                     <p class="red">Episodes:</p>
-                    <p class="bold">13</p>
+                    <p class="bold">24</p>
                 </div>
                 <div class="sub">
                     <p class="red">Subtitle:</p>
-                    <p class="bold">English {ASS} [Softcoded]</p>
+                    <p class="bold">English-Signs & Songs + Dialogue [Softcoded]</p>
                 </div>
                 <div class="quality">
                     <p class="red">Quality:</p>
-                    <p class="bold">1080p FHD | 720p HD | 480p WEB-DL</p>
+                    <p class="bold">1080p FHD | 720p HD | 480p BDRip</p>
                 </div>
                 <div class="encoder">
                     <p class="red">Encoder:</p>
@@ -163,7 +158,17 @@
                 </div>
                 <div class="synopsis">
                     <p class="red">Synopsis:</p>
-                    <p class="bold_1">In a world of gifted hunters and monsters, a weak hunter Sung Jinwoo gains extraordinary powers through a <br>mysterious program, leading him to become one of the strongest hunters and conquering even the strongest dungeons.</p>
+                    <p class="bold_1">A boy swallows a cursed talisman - the finger of a demon - and becomes cursed himself. He enters a shaman's<br> school to be able to locate the demon's other body parts and thus exorcise himself.</p>
+                </div>
+                <div class="track">
+                    <p class="track1">
+                        Audio Track Info For 1080p HEVC [HQ]:-
+                    </p>
+                    <p class="track1_1">Track 1:- Hindi AAC 2.0 Stereo 128kbps</p>
+                    <p class="track2">Track 2:- Tamil AAC 2.0 Stereo 128kbps</p>
+                    <p class="track2">Track 3:- Telugu AAC 2.0 Stereo 128kbps</p>
+                    <p class="track2">Track 4:- English AAC 2.0 Stereo 128kbps</p>
+                    <p class="track2">Track 5:- Japanese E-AC3 2.0 448kbps</p>
                 </div>
             </div>
             <div class="screenshot">
@@ -171,9 +176,9 @@
                 <p class="bold_2">+</p>
             </div>
             <hr class="ss">
-            <p class="sl">||Download Solo Leveling Season 2 Episodes in Hindi Multi Audio||</p>
+            <p class="sl">||Download Jujutsu Kaisen Season 1 Episodes in Hindi Multi Audio||</p>
             <div class="episode1">
-                <p>season 2</p>
+                <p>season 1</p>
                 <div class="episode1_2 open-popup-btn">
                     <p class="small_1">Episode 1</p>
                     <p class="bold_2">+</p>
@@ -223,7 +228,51 @@
                     <p class="bold_2">+</p>
                 </div>
                 <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 13 {NEW}</p>
+                    <p class="small_1">Episode 13</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 14</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 15</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 16</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 17</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 18</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 19</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 20</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 21</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 22</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 23</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 24 {NEW}</p>
                     <p class="bold_2">+</p>
                 </div>
             </div>
@@ -235,12 +284,28 @@
             <div class="zip1">
             <p class="zip">||Complete Pack Single Zip File||</p>
             <div class="episode1_3 open-popup-btn">
-                <p class="small_1">Zip Files Single Download Links</p>
+                <p class="small_1">480p SD Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">720p HD Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">720p HEVC Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">1080p HEVC Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">1080p HEVC HQ Complete Pack</p>
                 <p class="bold_2">+</p>
             </div>
             </div>
-            <p class="add">COMPLETE SEASON 2 ADDED</p>
-            <p class="season1">Download Season 1</p>
+            <p class="add">COMPLETE SEASON 1 ADDED</p>
+            <p class="season1">Download Season 2</p>
             <p class="watch_on">Watch On Crunchyroll & Support Anime in India.</p>
             <div class="click">
                 <p>how to download movies and series from here?</p>
@@ -343,9 +408,11 @@
                     <hr class="hr_2">
                     <div class="uploads">
                         <p>
-                            Solo Leveling Season 2: Arise from the Shadow
-                            [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
-                            &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            <a href="./SL.html">
+                                Solo Leveling Season 2: Arise from the Shadow
+                                [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
+                                &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            </a>
                         </p>
                         <p>
                             <a href="./DS.html">
@@ -357,12 +424,10 @@
                             </a>
                         </p>
                         <p>
-                            <a href="./JJK.html">
                                 Jujutsu Kaisen Season 01
                                 [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p,
                                 720p
                                 &amp; 1080p HD WEB-DL | 10bit HEVC ESub
-                            </a>
                         </p>
                         <p>
                             <a href="./Naruto.html">
