--- a/Anime Website/HTML/index.html
+++ b/Anime Website/HTML/index.html
@@ -335,6 +335,36 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="anime">
+                                <img src="../utils/Attack On Titan(1).jpg"
+                                    alt="Attack On Titan" class="latest_img">
+                                <div class="description">
+                                    <p>
+                                        <a href="./DN.html">
+                                            Attack On Titan
+                                            [Hindi-Tamil-Telugu<br>-Eng-Jap]
+                                            Multi Audio 480p, 720p &amp;<br>
+                                            1080p
+                                            HD
+                                            WEB-DL | 10bit HEVC ESub
+                                        </a>
+                                    </p>
+                                    <br>
+                                    <div class="time">
+                                        <div class="date">
+                                            <img src="../utils/Clock.svg"
+                                                alt="clock image" class="clock">
+                                            <p>April 20, 2025</p>
+                                        </div>
+                                        <div class="source">
+                                            <img src="../utils/Profile.svg"
+                                                alt="Source Image"
+                                                class="profile">
+                                            <p>Hetuk Patel</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="pagination">
                             <button class="btn2">1</button>
